adding new files

--- a/csit.html
+++ b/csit.html
@@ -18,7 +18,6 @@
 </head>
 
 <body>
-
     <!-- Navbar -->
     <nav class="navbar   navbar-expand-lg bg-primary">
         <div class="container-fluid">
@@ -99,12 +98,12 @@
             <div class="col-lg-3 shadow mt-3">
                 <h4>Third Semester</h4>
                 <ol>
-                    <li><a href="">Computer Architecture</a></li>
-                    <li><a href="">Discrete Structure</a></li>
-                    <li><a href="">Introduction To Management</a></li>
+                    <li><a href="csit/3sem/coa/2078.html">Computer Architecture</a></li>
+                    <li><a href="csit/3sem/ds/2078.html">Discrete Structure</a></li>
+                    <li><a href="csit/3sem/management/2078.html">Introduction To Management</a></li>
                     <li><a href="csit/3sem/c++/2078.html">Object Oriented Programming with C++</a></li>
-                    <li><a href="">Operating System</a></li>
-                    <li><a href="">Statistics and Probability</a></li>
+                    <li><a href="csit/3sem/os/2078.html">Operating System</a></li>
+                    <li><a href="csit/3sem/statI/2078.html">Statistics and Probability</a></li>
                 </ol>
             </div>
         </div>
@@ -113,29 +112,29 @@
             <div class="col-lg-3 shadow mt-3">
                 <h4>Fourth Semester</h4>
                 <ol>
-                    <li><a href="">System Analysis and Design</a></li>
+                    <li><a href="csit/4sem/sad/2079.html">System Analysis and Design</a></li>
                     <li><a href="">Numerical Methods</a></li>
-                    <li><a href="">Database Management System</a></li>
-                    <li><a href="">Applied Statistics</a></li>
-                    <li><a href="">Data Communication and Networks</a></li>
+                    <li><a href="csit/4sem/database/2073.html">Database Management System</a></li>
+                    <li><a href="csit/4sem/satII/2079.html">Applied Statistics</a></li>
+                    <li><a href="csit/4sem/dcn/2079.html">Data Communication and Networks</a></li>
                     <li><a href="">Theory Of Computation</a></li>
                 </ol>
             </div>
             <div class="col-lg-3 shadow mt-3">
                 <h4>Fifth Semester</h4>
                 <ol>
-                    <li><a href="">Computer Graphics</a></li>
-                    <li><a href="">Data Analysis and Algorithms</a></li>
-                    <li><a href="">Compiler Design</a></li>
-                    <li><a href="">Simulation and Modeling</a></li>
-                    <li><a href="">Artificial Intelligence</a></li>
-                    <li><a href="">Web Technology I</a></li>
+                    <li><a href="csit/5sem/cg/2073.html">Computer Graphics</a></li>
+                    <li><a href="csit/5sem/daa/2075.html">Data Analysis and Algorithms</a></li>
+                    <li><a href="csit/5sem/cd/2073.html">Compiler Design</a></li>
+                    <li><a href="csit/5sem/sam/2079.html">Simulation and Modeling</a></li>
+                    <li><a href="csit/5sem/ai/2073.html">Artificial Intelligence</a></li>
+                    <li><a href="csit/5sem/web/2073.html">Web Technology I</a></li>
                 </ol>
             </div>
             <div class="col-lg-3 shadow mt-3">
                 <h4>Sixth Semester</h4>
                 <ol>
-                    <li><a href="">Introduction to Cryptography</a></li>
+                    <li><a href="csit/6sem/crypto/2074.htm">Introduction to Cryptography</a></li>
                     <li><a href="">Java Progamming I</a></li>
                     <li><a href="">Research Methodology for CS</a></li>
                     <li><a href="">Software Engineering</a></li>
