--- a/csit/3sem/c++/2078.html
+++ b/csit/3sem/c++/2078.html
@@ -105,10 +105,12 @@
                         <li>What is namespace? Give an example.</li>
                         <li>List any two differences between class and objects.</li>
                         <li>what is container class?</li>
+                        <!-- Group B -->
                         <h5 class="text-center">Group B</h5>
                         <b>
                             <p class="text-center">Attempt any five questions. (Short questions) (5x8=40)</p>
                         </b>
+                        <!-- Group B -->
                         <li>What is inline function?Write a program to calculate cube of a number?. </li>
                         <li>What is template? WAP to add two numbers using concepts of template..</li>
                         <li>How do you convert one .class type to another class type? Write a c++ program to convert
@@ -117,10 +119,12 @@
                         <li>What is dyamic memory allocation? Write a program to add to string using dynamic constructor
                             concepts. </li>
                         <li>Define virtual function with suitable example. </li>
+                        <!-- Group C-->
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any three questions. (Long questions)</p>
                         </b>
+                        <!-- Group C -->
                         <li>What are the limitation of procedure-oriented programming?mention the features of oops with
                             example.
                         </li>
