--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <!-- Javascript custome -->
   <script>
-        function displayMessage(){
-          alert("Resources In WebSite Are Not Completed Yet, But We Are Adding Resources On Daily Basis. Thank You For Visiting Our Work.");
-        }
-        displayMessage();
+     function displayMessage() {
+        alert("Resources In WebSite Are Not Completed Yet, But We Are Adding Resources On Daily Basis. Thank You For Visiting Our Work.");
+     }
+    displayMessage(); 
   </script>
 
 </head>
@@ -230,42 +230,56 @@
 
     <div class="row justify-content-center">
       <div class="col-md-8 ">
-      <div class="accordion accordion-flush" id="accordionFlushExample">
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingOne">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              How Should I Contribute In This Project By Adding Materials or By Source Code?
-            </button>
-          </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">You can contribute by both ways i.e by providing materials to us or by adding lines of source code in this 
-              project. Send us materials using Gmail or in what's app (you can get gmail as well as contact number in Contact Section of our website) <br>
-              Source code of this project is publicly available in github. For this visit the given link <a href="https://github.com/birendrabohara1230/bootstrap.git"><i>click here</i></a>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                How Should I Contribute In This Project By Adding Materials or By Source Code?
+              </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">You can contribute by both ways i.e by providing materials to us or by adding
+                lines of source code in this
+                project. Send us materials using Gmail or in what's app (you can get gmail as well as contact number in
+                Contact Section of our website) <br>
+                Source code of this project is publicly available in github. For this visit the given link <a
+                  href="https://github.com/birendrabohara1230/bootstrap.git"><i>click here</i></a>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                Accordion Item #2
+              </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+                <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being
+                filled with some actual content.</div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                Accordion Item #3
+              </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+              data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the
+                <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting
+                happening here in terms of content, but just filling up the space to make it look, at least at first
+                glance, a bit more representative of how this would look in a real-world application.</div>
             </div>
           </div>
         </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingTwo">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-              Accordion Item #2
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-          </div>
-        </div>
-        <div class="accordion-item">
-          <h2 class="accordion-header" id="flush-headingThree">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-              Accordion Item #3
-            </button>
-          </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-          </div>
-        </div>
       </div>
-    </div>
     </div>
 
 
@@ -283,44 +297,44 @@
         <img src="images/birendra.jpg" width="200px" alt="" class="img-fluid rounded">
         <h5>Birendra Bohara</h5>
         <h6>FWU Bsc. CSIT 2076</h6>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""> <i class="bi bi-instagram"></i></i></a>
-        <a href=""><i class="bi bi-github"></i></i></i></a>
+        <a href="https://www.facebook.com/birendra.bohara.904"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/birendra2865/"> <i class="bi bi-instagram"></i></i></a>
+        <a href="https://github.com/birendrabohara1230"><i class="bi bi-github"></i></i></i></a>
       </div>
       <div class="col-md-3 text-center">
         <img src="images/indra.jpg" width="200px" alt="" class="img-fluid rounded">
         <h5>Indra Kumar Ayer</h5>
         <h6>FWU Bsc. CSIT 2076</h6>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""> <i class="bi bi-instagram"></i></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"> <i class="bi bi-instagram"></i></i></a>
       </div>
       <div class="col-md-3 text-center">
         <img src="images/nishan.jpg" width="200px" alt="" class="img-fluid rounded">
         <h5>Nishan Singh</h5>
         <h6>FWU Bsc. CSIT 2076</h6>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""> <i class="bi bi-instagram"></i></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"> <i class="bi bi-instagram"></i></i></a>
       </div>
       <div class="col-md-3 text-center">
         <img src="images/dilip.jpg" width="200px" alt="" class="img-fluid rounded">
         <h5>Dilip Bist</h5>
         <h6>FWU Bsc. CSIT 2076</h6>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""> <i class="bi bi-instagram"></i></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"> <i class="bi bi-instagram"></i></i></a>
       </div>
       <div class="col-md-3 text-center">
         <img src="images/rajeshkarki.jpg" width="200px" alt="" class="img-fluid rounded">
         <h5>Rajesh Karki</h5>
         <h6>FWU Bsc. CSIT 2076</h6>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""> <i class="bi bi-instagram"></i></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"> <i class="bi bi-instagram"></i></i></a>
       </div>
       <div class="col-md-3 text-center">
         <img src="images/gaurav.jpg" width="200px" alt="" class="img-fluid rounded">
         <h5>Gaurav Bhatt</h5>
         <h6>FIBSS SEE 2079</h6>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""> <i class="bi bi-instagram"></i></i></a>
+        <a href="#"><i class="bi bi-facebook"></i></a>
+        <a href="#"> <i class="bi bi-instagram"></i></i></a>
       </div>
     </div>
 
