adding new files

--- a/csit/2sem/DL/2072.html
+++ b/csit/2sem/DL/2072.html
@@ -70,6 +70,7 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
+                    <a href="2071.html"><button type="button" class="btn">2071</button></a>
                     <a href="#"><button type="button" class="btn  paper-year-style">2072</button></a>
                 </div>
             </div>
@@ -77,7 +78,7 @@
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
                 <p>End-Term Examination-2072</p>
-                <p>Data Structure and Algorithms (Com.Sc.DSA.121)</p>
+                <p>Digital Logic Design (Com.Sc.DLG.121)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -97,35 +98,40 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define "Abstract Data Type (ADT)". Explain the phrase "Queue as an ADT". What is the difference between ADT and data structure?</li>
-                        <li>Analyze the time complexity of the algorithes represented by following pseudo-code in terms of big-0 notation. <br>
-                            <img src="../../../images/2072dsa2.png" alt="" class="img-fluid">
-                        </li>
-                        <li>Define heap. Construct a max-heap from following data (show each step). 11, 12, 13, 10, 17, 5, 9, 23, 15, 25</li>
-                        <li>Write selection sort algorithm and analyze its time complexity.</li>
-                        <li>Convert following infix expression to postfix expression using stack (show each step): (a+(b*c)/e)-f</li>
-                        <li>Define a linked list. Explain the different types of linked lists.</li>
-                        <li>Write linear search algorithm and analyze its complexity.</li>
-                        <li>Give a brief account on Stack data structure and its applicationss. </li>
+                        <li>Explain error detecting and error correcting codes.</li>
+                        <li>Simplify the following:-<br>
+                            a. (462.123)<sub>2</sub>=(?)<sub>2</sub><br>
+                            b. (1272)<sub>10</sub>=(?)<sub>16</sub><br>
+                            c. Subtract 10011001 from 10110010 by using 1's complement.<br>
+                            d. Subtract 1100110010 from 1000111011 by using 2's complement.</li>
+                        <li>Define universal gate. Show NOR gate as universal gate.</li>
+                        <li>State and prove de-Morgan's laws.</li>
+                        <li>Reduce Y=(A+B) (A+B') (A'+B) by using the laws and theorems of Boolean algebra and draw
+                            circuits of simplified expression.</li>
+                        <li>What is full subtractor?Explain full subtractor with logic circuits & truth table.</li>
+                        <li>Differentiate between combinational and sequential circuits. Explain multiplexer.</li>
+                        <li>Explain RAM with block diagram and logic circuits.</li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>What do you mean by a AVL tree? How would you insert following numbers into an initially empty AVL one by one (show each step). 10, 20, 30, 25, 27, 7, 8, 23</li>
-                        <li>Define spanning tree of a graph. Illustrate with example, the Kruskal's method and Prim's method for finding
-                            minimum spanning tree.</li>
-                        <li>What do you mean by tree traversal? Discuss binary tree traversal techniques.</li>
+                        <li>What is flip-flop? Explain different types of flip-flops with circuit diagrams.</li>
+                        <li>Define K-map for four variables. Simplify the following expression by using K-map and draw
+                            logic circuit for simplified expression. F(w,x,y,z)=Σ(0,1,2,3,7,8,10) and
+                            d(w,x,y,z)=Σ(5,6,11,15)</li>
+                        <li>Define encoder and decoder. Explain BCD to decimal decoder with logic circuit and truth
+                            table.</li><br>
                     </ol>
                 </div>
             </div>
             <div class="col-lg-3 col-11 shadow mb-4" id="paper-fourth-sem">
                 <h4>Second Semester</h4>
                 <ol>
-                  <li><a href="#">Linear Algebra</a></li>
-                  <li><a href="#">Mechanics And Electrodynamics</a></li>
-                  <li><a href="../DL/2071.html">Digital Logic Design</a></li>
-                  <li><a href="#">Microprocessor System</a></li>
-                  <li><a href="#">Data Structure And Algorithms</a></li>
+                    <li><a href="#">Linear Algebra</a></li>
+                    <li><a href="#">Mechanics And Electrodynamics</a></li>
+                    <li><a href="#">Digital Logic Design</a></li>
+                    <li><a href="#">Microprocessor System</a></li>
+                    <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
                 </ol>
             </div>
         </div>
