--- a/csit.html
+++ b/csit.html
@@ -90,9 +90,9 @@
                 <ol>
                     <li><a href="">Linear Algebra</a></li>
                     <li><a href="">Mechanics And Electrodynamics</a></li>
-                    <li><a href="">Digital Logic Design</a></li>
+                    <li><a href="csit/2sem/DL/2071.html">Digital Logic Design</a></li>
                     <li><a href="">Microprocessor System</a></li>
-                    <li><a href="">Data Structure And Algorithms</a></li>
+                    <li><a href="csit/2sem/DSA/2072.html">Data Structure And Algorithms</a></li>
                 </ol>
             </div>
             <div class="col-lg-3 shadow mt-3">
