--- a/csit/2sem/DL/2071.html
+++ b/csit/2sem/DL/2071.html
@@ -70,14 +70,15 @@
             <!-- Paper years -->
             <div class="row text-center" id="paper-year">
                 <div class="col-8">
-                    <a href="#"><button type="button" class="btn  paper-year-style">2072</button></a>
+                    <a href="#"><button type="button" class="btn  paper-year-style">2071</button></a>
+                    <a href="2072.html"><button type="button" class="btn">2072</button></a>
                 </div>
             </div>
 
             <div class="col-lg-8 col-11 text-center border shadow mb-4" id="paper-model">
                 <h5>FAR-WESTERN UNIVERSITY</h5>
-                <p>End-Term Examination-2072</p>
-                <p>Data Structure and Algorithms (Com.Sc.DSA.121)</p>
+                <p>End-Term Examination-2071</p>
+                <p>Digital Logic Design (Com.Sc.DLG.121)</p>
                 <div class="row justify-content-between">
                     <div class="col-md-5 text-start mb-4">
                         <b>Faculty:</b>Science and Technology (CSIT) <br>
@@ -97,24 +98,21 @@
                 </b>
                 <div class="text-start">
                     <ol>
-                        <li>Define "Abstract Data Type (ADT)". Explain the phrase "Queue as an ADT". What is the difference between ADT and data structure?</li>
-                        <li>Analyze the time complexity of the algorithes represented by following pseudo-code in terms of big-0 notation. <br>
-                            <img src="../../../images/2072dsa2.png" alt="" class="img-fluid">
-                        </li>
-                        <li>Define heap. Construct a max-heap from following data (show each step). 11, 12, 13, 10, 17, 5, 9, 23, 15, 25</li>
-                        <li>Write selection sort algorithm and analyze its time complexity.</li>
-                        <li>Convert following infix expression to postfix expression using stack (show each step): (a+(b*c)/e)-f</li>
-                        <li>Define a linked list. Explain the different types of linked lists.</li>
-                        <li>Write linear search algorithm and analyze its complexity.</li>
-                        <li>Give a brief account on Stack data structure and its applicationss. </li>
+                         <li>What are the features of digital system? Subtract 1001110001 from 1000110010 by using 2's complement. (4+4)</li>
+                         <li>State and prove DE Morgan's first and second law.</li>
+                         <li>What is universal gate? Show NOR gate as universal gate. (2+6)</li>
+                         <li>Explain NAND implementation of logic circuit.</li>
+                         <li>What is counter? Explain ripple counter.</li>
+                         <li>Differentiate between synchronous and asynchronous sequential circuit with example.</li>
+                         <li>What is full address? Explain it.</li>
+                         <li>Defie multiplexer. Draw circuit diagram of multiplexer.</li>
                         <h5 class="text-center">Group C</h5>
                         <b>
                             <p class="text-center">Attempt any two questions. (long questions) (2x16=32)</p>
                         </b>
-                        <li>What do you mean by a AVL tree? How would you insert following numbers into an initially empty AVL one by one (show each step). 10, 20, 30, 25, 27, 7, 8, 23</li>
-                        <li>Define spanning tree of a graph. Illustrate with example, the Kruskal's method and Prim's method for finding
-                            minimum spanning tree.</li>
-                        <li>What do you mean by tree traversal? Discuss binary tree traversal techniques.</li>
+                        <li>What is flip-flop? Explain SR, JK maser-slave flip-flop. (2+4+6)</li>
+                        <li>What is decoder? Describe it with blick diagram. Construct a 5-line to 32-line decoder with 3-line to 8-line decoder and 2-line to 4-line decoder.</li>
+                        <li>Define POS and SOP term. Simplify and draw the logic diagram for the following Boolean expression: F(A, B, C, D) = Σ(0,2,4,5,8,14,15) and d(A,B,C,D) = Σ(7,10,13). (3+13)</li>
                     </ol>
                 </div>
             </div>
@@ -123,9 +121,9 @@
                 <ol>
                   <li><a href="#">Linear Algebra</a></li>
                   <li><a href="#">Mechanics And Electrodynamics</a></li>
-                  <li><a href="../DL/2071.html">Digital Logic Design</a></li>
+                  <li><a href="#">Digital Logic Design</a></li>
                   <li><a href="#">Microprocessor System</a></li>
-                  <li><a href="#">Data Structure And Algorithms</a></li>
+                  <li><a href="../DSA/2072.html">Data Structure And Algorithms</a></li>
                 </ol>
             </div>
         </div>
